--- a/.github/workflows/dvmhost-build-action.yml
+++ b/.github/workflows/dvmhost-build-action.yml
@@ -68,7 +68,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add $LAST_COMMIT_HASH_FILE
           git commit -m "Update last commit hash"
-          git push origin master
+          git push origin main
 
   build:
     name: Build
