--- a/.github/workflows/dvmhost-build-action.yml
+++ b/.github/workflows/dvmhost-build-action.yml
@@ -77,6 +77,7 @@ jobs:
         if: steps.check_changes.outputs.CHANGED == 'true'
         run: |
           echo "Saving the last commit hash for future comparison."
+          cd dvm-build
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add $LAST_COMMIT_HASH_FILE
