--- a/.github/workflows/dvmhost-build-action.yml
+++ b/.github/workflows/dvmhost-build-action.yml
@@ -80,8 +80,8 @@ jobs:
           cd dvm-build
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add $LAST_COMMIT_HASH_FILE
-          git commit -m "Update last commit hash"
+          git add .github/.last_commit_hash
+          git commit -m "Update last commit hash" || echo "No changes to commit"
           git push origin main
 
   build:
