--- a/.github/workflows/dvmhost-build-action.yml
+++ b/.github/workflows/dvmhost-build-action.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Get last commit hash of the master branch
         id: get_last_commit
         run: |
+          cd dvmhost
           FULL_HASH=$(git rev-parse HEAD)
           SHORT_HASH=$(git rev-parse --short HEAD)
           echo "::set-output name=LAST_COMMIT_HASH::$FULL_HASH"
