--- a/.github/workflows/dvmhost-build-action.yml
+++ b/.github/workflows/dvmhost-build-action.yml
@@ -180,7 +180,7 @@ jobs:
           name: Build ${{ needs.setup.outputs.DATE }}
           draft: false
           prerelease: false
-          body: "Last commit: ${{ needs.get_last_commit.outputs.SHORT_COMMIT_HASH }}"
+          body: "Last commit: ${{ needs.setup.outputs.SHORT_COMMIT_HASH }}"
 
   upload:
     name: Upload
