--- a/.github/workflows/dvmhost-build-action.yml
+++ b/.github/workflows/dvmhost-build-action.yml
@@ -86,7 +86,7 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .github/.last_commit_hash
           git commit -m "Update last commit hash" || echo "No changes to commit"
-          git push origin main
+          git push origin package-caching
 
   build:
     name: Build
