--- a/.github/workflows/dvmhost-build-action.yml
+++ b/.github/workflows/dvmhost-build-action.yml
@@ -127,11 +127,15 @@ jobs:
         with:
           packages: gcc g++ cmake make libasio-dev libncurses-dev libssl-dev
 
+      - name: Install arm64 dependencies
+        if: matrix.arch == 'arm64'
+        uses: awalsh128/cache-apt-pkgs-action@v1.4.2
+        with:
+          packages: g++-aarch64-linux-gnu gcc-aarch64-linux-gnu libasio-dev:arm64 libncurses-dev:arm64 libssl-dev:arm64
+
       - name: Install dependencies
         run: |
-          if [ "${{ matrix.arch }}" == "arm64" ]; then
-            sudo apt-get install -y g++-aarch64-linux-gnu gcc-aarch64-linux-gnu libasio-dev:arm64 libncurses-dev:arm64 libssl-dev:arm64
-          elif [ "${{ matrix.arch }}" == "arm" ] || [ "${{ matrix.arch }}" == "armhf" ]; then
+          if [ "${{ matrix.arch }}" == "arm" ] || [ "${{ matrix.arch }}" == "armhf" ]; then
             sudo apt-get install -y g++-arm-linux-gnueabihf gcc-arm-linux-gnueabihf libasio-dev:armhf libncurses-dev:armhf libssl-dev:armhf
           fi
 
