--- a/.github/workflows/dvmhost-build-action.yml
+++ b/.github/workflows/dvmhost-build-action.yml
@@ -223,12 +223,11 @@ jobs:
 
       - name: Save last commit hash
         run: |
-          LAST_COMMIT_HASH_FILE="dvm-build/.github/.last_commit_hash"
           echo "Saving the last commit hash for future comparison."
           cd dvm-build
-          echo "${{ needs.setup.outputs.LAST_COMMIT_HASH }}" > $LAST_COMMIT_HASH_FILE
+          echo "${{ needs.setup.outputs.LAST_COMMIT_HASH }}" > .github/.last_commit_hash
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add $LAST_COMMIT_HASH_FILE
+          git add .github/.last_commit_hash
           git commit -m "Update last commit hash" || echo "No changes to commit"
           git push origin package-caching
