--- a/.github/workflows/dvmhost-build-action.yml
+++ b/.github/workflows/dvmhost-build-action.yml
@@ -51,7 +51,7 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
           repository: CANTACS/dvm-build
-          ref: package-caching
+          ref: main
           path: dvm-build
 
       - name: Get last commit hash of the master branch
@@ -75,7 +75,19 @@ jobs:
           else
             echo "Master branch has new changes."
             echo "CHANGED=true" >> $GITHUB_OUTPUT
+            echo "${{ steps.get_last_commit.outputs.LAST_COMMIT_HASH }}" > $LAST_COMMIT_HASH_FILE
           fi
+
+      - name: Save last commit hash
+        if: steps.check_changes.outputs.CHANGED == 'true'
+        run: |
+          echo "Saving the last commit hash for future comparison."
+          cd dvm-build
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git add .github/.last_commit_hash
+          git commit -m "Update last commit hash" || echo "No changes to commit"
+          git push origin main
 
   build:
     name: Build
@@ -218,7 +230,7 @@ jobs:
         uses: actions/checkout@v4.1.1
         with:
           repository: CANTACS/dvm-build
-          ref: package-caching
+          ref: main
           path: dvm-build
 
       - name: Save last commit hash
@@ -230,4 +242,4 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .github/.last_commit_hash
           git commit -m "Update last commit hash" || echo "No changes to commit"
-          git push origin package-caching
+          git push origin main
