--- a/.github/workflows/dvmhost-build-action.yml
+++ b/.github/workflows/dvmhost-build-action.yml
@@ -57,7 +57,7 @@ jobs:
         uses: actions/checkout@v4.1.7
         with:
           repository: CANTACS/dvm-build
-          ref: trigger-newbuild
+          ref: main
           path: dvm-build
 
       - name: Get last commit hash of the master branch
@@ -229,7 +229,7 @@ jobs:
         uses: actions/checkout@v4.1.7
         with:
           repository: CANTACS/dvm-build
-          ref: trigger-newbuild
+          ref: main
           path: dvm-build
 
       - name: Save last commit hash
@@ -241,4 +241,4 @@ jobs:
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add .github/.last_commit_hash
           git commit -m "Update last commit hash" || echo "No changes to commit"
-          git push origin trigger-newbuild
+          git push origin main
