--- a/.github/workflows/dvmhost-build-action.yml
+++ b/.github/workflows/dvmhost-build-action.yml
@@ -145,6 +145,8 @@ jobs:
           cp ${{ github.workspace }}/build/dvmhost ${{ github.workspace }}/build/dvmfne ${{ github.workspace }}/build/dvmcmd ${{ github.workspace }}/${{ env.PACKAGENAME }}
           if [[ "${{ matrix.arch }}" == "arm64" || "${{ matrix.arch }}" == "amd64" ]]; then
             cp ${{ github.workspace }}/build/dvmmon ${{ github.workspace }}/${{ env.PACKAGENAME }}
+            cp ${{ github.workspace }}/build/sysview ${{ github.workspace }}/${{ env.PACKAGENAME }}
+            cp ${{ github.workspace }}/build/tged ${{ github.workspace }}/${{ env.PACKAGENAME }}
           fi
           cd ${{ github.workspace }}
           zip -9 -r ${{ env.PACKAGENAME }}.zip ${{ env.PACKAGENAME }}
