--- a/.github/workflows/dvmhost-build-action.yml
+++ b/.github/workflows/dvmhost-build-action.yml
@@ -153,7 +153,7 @@ jobs:
       - name: Create package
         run: |
           mkdir -p ${{ github.workspace }}/${{ env.PACKAGENAME }}
-          cp ${{ github.workspace }}/build/dvmhost ${{ github.workspace }}/build/dvmfne ${{ github.workspace }}/build/dvmcmd ${{ github.workspace }}/${{ env.PACKAGENAME }}
+          cp ${{ github.workspace }}/build/dvmhost ${{ github.workspace }}/build/dvmfne ${{ github.workspace }}/build/dvmcmd ${{ github.workspace }}/build/dvmbridge ${{ github.workspace }}/${{ env.PACKAGENAME }}
           if [[ "${{ matrix.arch }}" == "arm64" || "${{ matrix.arch }}" == "amd64" ]]; then
             cp ${{ github.workspace }}/build/dvmmon ${{ github.workspace }}/${{ env.PACKAGENAME }}
             cp ${{ github.workspace }}/build/sysview ${{ github.workspace }}/${{ env.PACKAGENAME }}
